test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/sizeof_void_expression.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  ;
  return
  sizeof
  (
  (
  void
  )
  identifier(x)
  )
  ;
  }
